[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
nix = "0.25"
rustyline = "10.1.1"
signal-hook = "0.3.14"
regex = "1.7.3"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
